--- a/MobileHub/DataAccessLayer/2 DataAccessLayer.csproj
+++ b/MobileHub/DataAccessLayer/2 DataAccessLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EF18EA2F-78F0-41D3-8232-8F355285038C}</ProjectGuid>
+    <ProjectGuid>{B9B8881F-DDFA-4B86-9585-3E3CDA230E4C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Contracts</RootNamespace>
-    <AssemblyName>Contracts</AssemblyName>
+    <RootNamespace>DataAccessLayer</RootNamespace>
+    <AssemblyName>DataAccessLayer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,7 +31,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,12 +50,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UserContract.cs" />
+    <Compile Include="HelperClasses\DataManagerBase.cs" />
+    <Compile Include="HelperClasses\DbContextExtensions.cs" />
+    <Compile Include="HelperClasses\EntityManagerBase.cs" />
+    <Compile Include="HelperClasses\EntityState.cs" />
+    <Compile Include="Managers\Security\MembershipDataManager.cs" />
+    <Compile Include="Managers\Security\UserDataManager.cs" />
+    <Compile Include="Managers\MeetingDataManager.cs" />
+    <Compile Include="Managers\CustomerDataManager.cs" />
+    <Compile Include="Managers\CustomerUserDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
     <ProjectReference Include="..\LoginDatabaseContext\1 DatabaseContext.csproj">
-      <Project>{6B388114-1021-4A73-8EE5-E93DDAEC16A8}</Project>
+      <Project>{6b388114-1021-4a73-8ee5-e93ddaec16a8}</Project>
       <Name>1 DatabaseContext</Name>
     </ProjectReference>
   </ItemGroup>
