Still in design mode

--- a/MobileHub/DataAccessLayer/3 DataAccessLayer.csproj
+++ b/MobileHub/DataAccessLayer/3 DataAccessLayer.csproj
@@ -35,6 +35,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="LinqKit, Version=1.1.8.0, Culture=neutral, PublicKeyToken=bc217f8844052a91, processorArchitecture=MSIL">
+      <HintPath>..\packages\LinqKit.1.1.8.0\lib\net461\LinqKit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Azure.Mobile.Server.Entity, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.Mobile.Server.Entity.1.1.157.1\lib\net45\Microsoft.Azure.Mobile.Server.Entity.dll</HintPath>
       <Private>True</Private>
@@ -52,6 +56,7 @@
     <Compile Include="HelperClasses\DbContextExtensions.cs" />
     <Compile Include="HelperClasses\EntityManagerBase.cs" />
     <Compile Include="HelperClasses\EntityState.cs" />
+    <Compile Include="Managers\AddressDataManager.cs" />
     <Compile Include="Managers\Security\MembershipDataManager.cs" />
     <Compile Include="Managers\Security\UserDataManager.cs" />
     <Compile Include="Managers\MeetingDataManager.cs" />
