--- a/MobileHub/MobileHumWebApi/Web.config
+++ b/MobileHub/MobileHumWebApi/Web.config
@@ -16,8 +16,9 @@
     <!--    <add name="MobileHubCustomerContext" connectionString="metadata=res://*/MobileHubCustomerModel.csdl|res://*/MobileHubCustomerModel.ssdl|res://*/MobileHubCustomerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SqlExpress;initial catalog=MobileHubCustomer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
     <!-- Azure DB -->
-    <add name="MobileHubSecurityContext" connectionString="metadata=res://*/MobileHubSecurityModel.csdl|res://*/MobileHubSecurityModel.ssdl|res://*/MobileHubSecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mobilehub.database.windows.net;initial catalog=MobileHubSecurity;User Id=bledi1;Password=!3Tetor77;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MobileHubCustomerContext" connectionString="metadata=res://*/MobileHubCustomerModel.csdl|res://*/MobileHubCustomerModel.ssdl|res://*/MobileHubCustomerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mobilehub.database.windows.net;initial catalog=MobileHubCustomer;User Id=bledi1;Password=!3Tetor77;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+    <add name="MobileHubSecurityContext" connectionString="Server=tcp:mobilehub.database.windows.net;Initial Catalog=MobileHubSecurity;Persist Security Info=False;User ID=bledi1;Password=!3Tetor77;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;" providerName="System.Data.SqlClient" />
+    <add name="MobileHubCustomerContext" connectionString="Server=tcp:mobilehub.database.windows.net;Initial Catalog=MobileHubCustomer;Persist Security Info=False;User ID=bledi1;Password=!3Tetor77;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   
