--- a/MobileHub/3 RouteModel/App.Config
+++ b/MobileHub/3 RouteModel/App.Config
@@ -5,7 +5,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>    
-    <add name="MobileHubRouteContext" connectionString="data source=.\SqlExpress;initial catalog=MobileHubRoute;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    
+
+  <add name="MobileHubRouteContext" connectionString="metadata=res://*/MobileHubRouteModel.csdl|res://*/MobileHubRouteModel.ssdl|res://*/MobileHubRouteModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SqlExpress;initial catalog=MobileHubRoute;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  
+  
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
