--- a/MobileHub/RouteInfoLoaderWorkerRole/RouteInfoLoaderWorkerRole.csproj
+++ b/MobileHub/RouteInfoLoaderWorkerRole/RouteInfoLoaderWorkerRole.csproj
@@ -80,6 +80,16 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Parameters\Parameters.csproj">
+      <Project>{FA16C8CB-DE9D-4F44-9428-F29C463D31F9}</Project>
+      <Name>Parameters</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utilities\Utilities.csproj">
+      <Project>{ED199CA2-3D5F-4368-99D9-13FFECDD9087}</Project>
+      <Name>Utilities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
