--- a/MobileHub/RoutePlanner/2 RoutePlanner.csproj
+++ b/MobileHub/RoutePlanner/2 RoutePlanner.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="RoutePlanerManager.csx" />
+    <None Include="RoutePlanerManager.xcsx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
