--- a/MobileHub/RouteInfoLoaderWorkerRole/app.config
+++ b/MobileHub/RouteInfoLoaderWorkerRole/app.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+  <connectionStrings>
+    <add name="MobileHubCustomerContext" connectionString="data source=.\SqlExpress;initial catalog=MobileHubCustomer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MobileHubRouteContext" connectionString="metadata=res://*/MobileHubRouteModel.csdl|res://*/MobileHubRouteModel.ssdl|res://*/MobileHubRouteModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SqlExpress;initial catalog=MobileHubRoute;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+  </connectionStrings>
+  
     <system.diagnostics>
         <trace>
             <listeners>
