--- a/MobileHub/RouteInfoLoaderWorkerRole/RouteInfoLoaderWorkerRole.csproj
+++ b/MobileHub/RouteInfoLoaderWorkerRole/RouteInfoLoaderWorkerRole.csproj
@@ -57,6 +57,9 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Spatial, Version=5.8.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -69,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bindings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerRole.cs" />
   </ItemGroup>
@@ -77,9 +81,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GeneticAlgorithm\TspWithTimeWindows\TspWithTimeWindows.csproj">
+      <Project>{AF04F1DF-B675-4F9F-9144-3FEC2075FBB3}</Project>
+      <Name>TspWithTimeWindows</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Parameters\Parameters.csproj">
       <Project>{FA16C8CB-DE9D-4F44-9428-F29C463D31F9}</Project>
       <Name>Parameters</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Services\1 Services.csproj">
+      <Project>{69aac7af-af35-46c6-b347-8fac4f41d6f5}</Project>
+      <Name>1 Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\Utilities\Utilities.csproj">
       <Project>{ED199CA2-3D5F-4368-99D9-13FFECDD9087}</Project>
