--- a/MobileHub/MobileHumWebApi/packages.config
+++ b/MobileHub/MobileHumWebApi/packages.config
@@ -38,11 +38,14 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
+  <package id="Swashbuckle.Core.Net45" version="5.2.1" targetFramework="net461" />
+  <package id="Swashbuckle.Net45" version="5.2.1" targetFramework="net461" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.8.3" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="8.5.0" targetFramework="net461" />
 </packages>
